lizmap/www/assets/css/map.css
/* ... */
.lizmapPopup.olPopup .lizmapPopupDiv,
#map-content .lizmapPopupDiv{
  margin: 10px !important;
  margin-bottom: 20px !important;
}

#liz_layer_popup_contentDiv {
  max-height: 30vh;
  overflow: auto;
}

#popupcontent .lizmapPopupDiv{
  margin: 10px !important;
  margin-bottom: 20px !important;
  background-color:none;
}

#dock div.lizmapPopupDiv, #mini-dock div.lizmapPopupDiv, #right-dock div.lizmapPopupDiv, #bottom-dock div.lizmapPopupDiv{
  padding: 5px 10px;
  background-color: #F0F0F0 !important;
}

.lizmapPopup.olPopup .lizmapPopupTable,
#map-content .lizmapPopupTable,
#popupcontent .lizmapPopupTable{
  /* background:#333333 !important; */
  margin-bottom:10px;
  font-size:0.8em;
  width:100%;
  background-color: #F0F0F0 !important;

/*
  border: 1px solid #2B2B2B !important;
*/
  border-collapse: collapse;
}

.lizmapPopup.olPopup .lizmapPopupTable thead,
#map-content .lizmapPopupTable thead ,
#popupcontent .lizmapPopupTable thead {
  color: black;
  background-color: lightgrey;
  font-size: 1em;
}

.lizmapPopup.olPopup .lizmapPopupTable th,
#map-content .lizmapPopupTable th,
#popupcontent .lizmapPopupTable th{
/*
  width:50%;
  text-align: right;
*/
  text-align: left;
  vertical-align: top;
  padding-right: 5px;
}

.lizmapPopup.olPopup .lizmapPopupTable th.left,
#map-content .lizmapPopupTable th.left,
#popupcontent .lizmapPopupTable th.left{
  border-right: 1px solid #C9C9C9 !important;
}

.lizmapPopup.olPopup .lizmapPopupTable td,
#map-content .lizmapPopupTable td,
#popupcontent .lizmapPopupTable td{
  padding-left: 5px;
  word-break: break-word;
}

.lizmapPopup.olPopup .lizmapPopupTable thead th,
#map-content .lizmapPopupTable thead th,
#popupcontent .lizmapPopupTable thead th{
  text-align: center;
}

.lizmapPopup.olPopup .olPopupCloseBox,
#map-content .lizmapPopup .olPopupCloseBox,
#popupcontent .lizmapPopup .olPopupCloseBox{
  width: 20px; height: 20px;

  /* right:0px !important; top:0px !important; */
  background-color:#2B2B2B;
  background-image: url("images/sprite_menu.png");
  background-position: -48px -80px;
}

.lizmapPopup.olPopup .lizmapPopupDiv .lizmapPopupChildren h4,
#map-content .lizmapPopupDiv .lizmapPopupChildren h4,
#popupcontent .lizmapPopupDiv .lizmapPopupChildren h4,
.lizmapPopupChildren h4{
    margin: 0 10px;
    color: black !important;
    border-bottom: 1px solid rgb(0 0 0 / 40%);
    font-size: 0.85em;
}

.lizmapPopupChildren .popupAllFeaturesCompact{
  overflow: auto;
  padding-left: 20px;
}

.lizmapPopupChildren .popupAllFeaturesCompact .row{
  margin-left: -10px;
}

.lizmapPopupChildren{
  border: solid lightgray 1px;
  margin-top: 5px;
}

.lizmapPopupChildren .compact-tables,
.lizmapPopupChildren .explode-tables{
  margin-top: 3px;
  margin-left: 10px;
}

/* Don't display buttons when there is no table (when there is only one feature) */
.lizmapPopupChildren .compact-tables:not(:has(~ .popupAllFeaturesCompact)),
.lizmapPopupChildren .explode-tables:not(:has(~ .popupAllFeaturesCompact)){
  display: none;
}

#popupcontent .popupAllFeaturesCompact .lizmapPopupTable td{
  word-break: normal;
}

/* Map's popup OL8 */

.ol-popup {
  position: absolute;
  background-color: white;
  box-shadow: 0 1px 4px rgb(0 0 0 / 20%);
  padding: 5px;
  border-radius: 10px;
  border: 1px solid #ccc;
  bottom: 12px;
  left: -50px;
  min-width: 280px;
}

.ol-popup::after, .ol-popup::before {
  top: 100%;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.ol-popup::after {
  border-top-color: white;
  border-width: 10px;
  left: 48px;
  margin-left: -10px;
}

.ol-popup::before {
  border-top-color: #ccc;
  border-width: 11px;
  left: 48px;
  margin-left: -11px;
}

.ol-popup-closer {
  text-decoration: none;
  position: absolute;
  top: 2px;
  right: 8px;
}

.ol-popup-closer::after {
  content: "✖";
}

/* Tooltip */

#tooltipPopupContent {
  background-color:#F0F0F0 !important;
  border: rgb(0 0 0 / 70%) solid 4px;
  min-width:100px;
}

#tooltipPopupContent .lizmapPopupTable {
  margin:auto;
}

#tooltipPopupContent th,
#tooltipPopupContent td {
  white-space: nowrap;
}

#tooltipPopupContent td {
  padding-right: 5px;
}

#edition-modal form {
  margin: 0;
}

#edition-modal form .jforms-choice .jforms-notselected {
  background: #EEE;
}

#edition-modal form .jforms-choice .jforms-notselected .jforms-disabled{
  color: #999;
}

.lizmapPopup.olPopup .jforms-ctrl-date,
#map-content .lizmapPopup .jforms-ctrl-date,
#popupcontent .lizmapPopup .jforms-ctrl-date,
#dock .jforms-ctrl-date,
#edition-modal .jforms-ctrl-date,
.lizmapPopup.olPopup .jforms-ctrl-datetime,
#map-content .lizmapPopup .jforms-ctrl-datetime,
#popupcontent .lizmapPopup .jforms-ctrl-datetime,
#dock .jforms-ctrl-datetime,
#edition-modal .jforms-ctrl-datetime{
  width:auto;
}

#dock .controls select.jforms-ctrl-date,
#edition-modal .controls select.jforms-ctrl-date,
#dock .controls select.jforms-ctrl-datetime,
#edition-modal .controls select.jforms-ctrl-datetime {
  padding:0;
}

#dock .controls input.jforms-ctrl-date[size="4"],
#edition-modal .controls input.jforms-ctrl-date[size="4"],
#dock .controls input.jforms-ctrl-datetime[size="4"],
#edition-modal .controls input.jforms-ctrl-datetime[size="4"] {
  max-width:35px;
}

#edition .edition {
  position: relative;
}

#edition .edition .waiter {
  background-color: rgb(255 255 255 / 40%);
  position: absolute;
  inset: 0;
  display: none;
}

#edition .edition .waiter .progress {
  margin-bottom: 0;
}

#edition-form-container h3 {
  color: black;
  background-color: transparent;
  line-height: 20px;
  font-size: 1.2em;
  padding: 1px 5px;
  margin-bottom: 4px;
}

#edition-form-container .form-horizontal .jforms-choice .jforms-item-controls .form-label{
  width:0;
}

#edition-segment-length, #edition-segment-angle {
  line-height: 30px;
}

#edition h3 span.title {
  display: none;
}
/* ... */

